--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <section class="coming">
-        <h1>Coming Soon ...</h1>
+        <h1>Under Construction</h1>
+        <h2>Coming Soon</h2>
         <img src="images/LOGO-FOR-WEB-5000-PIXELS.png" alt="MyDevelopment Logo">
     </section>
 </body>
