--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <img src="images/project1.png" alt="Modern Skyscraper">
                     <div class="project-info">
                         <div class="state">Sold</div>
-                        <h3>Modern Skyscraper</h3>
-                        <p>A high-rise commercial tower designed for sustainability and efficiency.</p>
+                        <h3>Modern Apartment Building</h3>
+                        <p>Glifada Attica</p>
                     </div>
                 </div>
                 <div class="project-details">
