--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     </div>
                 </div>
                 <div class="project-details">
-                    <p><strong>Location:</strong> Downtown Business District</p>
-                    <p><strong>Completion Year:</strong> 2023</p>
+                    <p><strong>Location:</strong> Glifada, Attica</p>
+                    <p><strong>Completion Year:</strong> 2024</p>
                 </div>
             </div>
             <div>
