--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="#skills">PROJECTS</a></li>
-                <li>            <a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="Alexander Logo"></a>
-                </li>
-                <li><a href="#projects">FOR&nbsp;SALE</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </nav>
+        <div class="header">
+            <a href="../index.html" class="logo-link-mobile"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
+            <div class="burger-menu">&#9776;</div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#skills">PROJECTS</a></li>
+                    <li>            <a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
+                    </li>
+                    <li><a href="#projects">FOR&nbsp;SALE</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+
     </header>
+    
     <section class="hero" id="hero">
         <div class="overlay">
             <img src="images/LOGO-NEGATIVE-FOR-WEB-200-PIXELS.png" alt="">
