--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,10 @@
                     <img src="images/location.svg" alt="">
                 </div>
                 <div class="contact-det-right">
-                    <h2>Visit us!</h2>
-                    <p>Meet us in person.</p>
+                    <h2>Email us!</h2>
+                    <p>Reach out to us—we’re here to help!</p>
                     <div class="contact-frame">
-                        Attica Greece, <br>
-                        Aretis 94, Glifada
+                        contact@mydevelopment.gr
                     </div>
                 </div>
             </div>
