--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
             <img onclick="setImage(4)" id="thumb4">
         </div>
     </section>
+
+
     <section class="our-work">
         <div class="title-container">
             <h2>Projects</h2>
             <h4>View All+</h4>
         </div>
         <div class="projects">
-            <div>
+            <a href="project-glifada.html">
                 <div class="project">
                     <img src="images/project1.png" alt="Modern Skyscraper">
                     <div class="project-info">
@@ -61,26 +63,28 @@
                     <p><strong>Location:</strong> Glifada, Attica</p>
                     <p><strong>Completion Year:</strong> 2024</p>
                 </div>
-            </div>
+            </a>
             <div>
-                <div class="project">
-                    <img src="images/project2.png" alt="Luxury Villas">
-                    <div class="project-info">
-                        <div class="state sale">For Sale</div>
-                        <h3>1st floor
-                            Maisonette</h3>
-                        <p>Vasileiou Voulgaroktonou 3, Voula</p>
+                <a href="project-voula166.html">
+                    <div class="project">
+                        <img src="images/project3.png" alt="Luxury Villas">
+                        <div class="project-info">
+                            <div class="state sale">For Sale</div>
+                            <h3>1st floor
+                                Maisonette</h3>
+                            <p>Vasileiou Voulgaroktonou 3, Voula</p>
+                        </div>
                     </div>
-                </div>
-                <div class="project-details">
-                    <p><strong>Location:</strong> Voula, Attica</p>
-                    <p><strong>Completion Year:</strong> Under Construction</p>
-                    <h5>115 sm (1,238 ft²)</h5>
-                </div>
+                    <div class="project-details">
+                        <p><strong>Location:</strong> Voula, Attica</p>
+                        <p><strong>Completion Year:</strong> Under Construction</p>
+                        <h5>115 sm (1,238 ft²)</h5>
+                    </div>
+                </a>
             </div>
             <div>
                 <div class="project">
-                    <img src="images/project3.png" alt="Industrial Complex">
+                    <img src="images/project2.png" alt="Industrial Complex">
                     <div class="project-info">
                         <div class="state sale">For Sale</div>
                         <h3>Ground floor
