--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#skills">PROJECTS</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
                     <li>            <a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
                     </li>
                     <li><a href="#projects">FOR&nbsp;SALE</a></li>
@@ -67,7 +67,7 @@
             <div>
                 <a href="project-voula166.html">
                     <div class="project">
-                        <img src="images/project3.png" alt="Luxury Villas">
+                        <img src="images/project2.png" alt="Luxury Villas">
                         <div class="project-info">
                             <div class="state sale">For Sale</div>
                             <h3>1st floor
@@ -78,13 +78,13 @@
                     <div class="project-details">
                         <p><strong>Location:</strong> Voula, Attica</p>
                         <p><strong>Completion Year:</strong> Under Construction</p>
-                        <h5>115 sm (1,238 ft²)</h5>
+                        <h5>166 sm (1,787 ft²)</h5>
                     </div>
                 </a>
             </div>
             <div>
                 <div class="project">
-                    <img src="images/project2.png" alt="Industrial Complex">
+                    <img src="images/project3.png" alt="Industrial Complex">
                     <div class="project-info">
                         <div class="state sale">For Sale</div>
                         <h3>Ground floor
@@ -95,7 +95,7 @@
                 <div class="project-details">
                     <p><strong>Location:</strong> Voula, Attica</p>
                     <p><strong>Completion Year:</strong> Under Construction</p>
-                    <h5>166 sm (1,787 ft²)</h5>
+                    <h5>115 sm (1,238 ft²)</h5>
                 </div>
             </div>
         </div>
