--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,21 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="#skills">PROJECTS</a></li>
-                <li>            <a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="Alexander Logo"></a>
-                </li>
-                <li><a href="#projects">FOR&nbsp;SALE</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </nav>
+        <div class="header">
+            <a href="index.html" class="logo-link-mobile"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
+            <div class="burger-menu">&#9776;</div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li>            <a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
+                    </li>
+                    <li><a href="forsale.html">FOR&nbsp;SALE</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+
     </header>
     <div class="map">
         <iframe src="https://maps.google.com/maps?q=Glifada&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
@@ -94,8 +99,8 @@
                 <h4>QUICK LINKS</h4>
                 <ul>
                     <a href="index.html">Home</a>
-                    <a href="services.html">Services</a>
                     <a href="projects.html">Projects</a>
+                    <a href="forsale.html">For Sale</a>
                     <a href="contact.html">Contact</a>
                 </ul>
             </div>
