--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="header">
-            <a href="../index.html" class="logo-link-mobile"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
+            <a href="index.html" class="logo-link-mobile"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
             <div class="burger-menu">&#9776;</div>
             <nav>
                 <ul>
@@ -21,7 +21,7 @@
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li>            <a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
                     </li>
-                    <li><a href="#projects">FOR&nbsp;SALE</a></li>
+                    <li><a href="forsale.html">FOR&nbsp;SALE</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
@@ -47,7 +47,9 @@
     <section class="our-work">
         <div class="title-container">
             <h2>Projects</h2>
-            <h4>View All+</h4>
+            <a href="projects.html" style="text-decoration: none;">
+                <h4>View All+</h4>
+            </a>
         </div>
         <div class="projects">
             <a href="project-glifada.html">
@@ -101,42 +103,6 @@
         </div>
     </section>
 
-    <!-- <section class="contact-section">
-        <div class="contact-container">
-            <div class="contact-info">
-                    <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
-                    <div class="company-details">
-                        <p>MyDevelopment, Real Estate Construction Company</p>
-                        <hr>
-                        <p><b>Address:</b> Aretis 94, Glifada GR</p>
-                        <p><b>E-mail:</b> info@mydevelopment.gr</p>
-                        <p><b>Phone:</b> +306948145786</p>
-                    </div>
-                <div class="map">
-                    <iframe src="https://maps.google.com/maps?q=Glifada&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
-                </div>
-            </div>
-            <div class="contact-form">
-                <h2>Contact Us</h2>
-                <form action="#" method="POST">
-                    <div class="input-group">
-                        <input type="text" name="name" required placeholder="Name">
-                    </div>
-                    <div class="input-group">
-                        <input type="email" name="email" required placeholder="Email">
-                    </div>
-                    <div class="input-group">
-                        <textarea name="message" rows="5" required placeholder="Your Message"></textarea>
-                    </div>
-                    <button type="submit">Send Message</button>
-                </form>
-            </div>            
-        </div>
-    </section> -->
-    
-    <!-- <div class="line"></div> -->
-
-
     <footer>
         <div class="footer-container">
             <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
@@ -152,8 +118,8 @@
                 <h4>QUICK LINKS</h4>
                 <ul>
                     <a href="index.html">Home</a>
-                    <a href="services.html">Services</a>
                     <a href="projects.html">Projects</a>
+                    <a href="forsale.html">For Sale</a>
                     <a href="contact.html">Contact</a>
                 </ul>
             </div>
