--- a/projects.html
+++ b/projects.html
@@ -118,7 +118,7 @@
                     <li><a href="projects.html">PROJECTS</a></li>
                     <li>            <a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
                     </li>
-                    <li><a href="#projects">FOR&nbsp;SALE</a></li>
+                    <li><a href="forsale.html">FOR&nbsp;SALE</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
@@ -138,27 +138,53 @@
                 <a href="project-glifada.html" class="view-btn">View Project</a>
             </div>
         </div>
-
+        <div class="project-box">
+            <img src="images/A1 Swimming pool.jpg" alt="Seaside Villa">
+            <div class="project-details">
+                <h2>Voula 1st floor Maisonette 166 sq.m.</h2>
+                <p>An exquisite beachfront villa offering panoramic sea views and top-tier amenities.</p>
+                <a href="project-voula166.html" class="view-btn">View Project</a>
+            </div>
+        </div>
         <!-- Project 2 -->
         <div class="project-box ">
             <img src="images/A2_swimming_pool.jpg" alt="Luxury Apartments">
             <div class="project-details">
                 <h2>Voula 1st floor Maisonette 115 sq.m.</h2>
                 <p>A modern apartment building featuring two exclusive residences, designed for comfort and elegance.</p>
-                <a href="project-voula166.html" class="view-btn">View Project</a>
+                <a href="project-voula115.html" class="view-btn">View Project</a>
             </div>
         </div>
 
         <!-- Project 3 -->
-        <div class="project-box">
-            <img src="images/A1 Swimming pool.jpg" alt="Seaside Villa">
-            <div class="project-details">
-                <h2>Voula 1st floor Maisonette 166 sq.m.</h2>
-                <p>An exquisite beachfront villa offering panoramic sea views and top-tier amenities.</p>
-                <a href="#" class="view-btn">View Project</a>
+        
+    </section>
+    <footer>
+        <div class="footer-container">
+            <img src="images/LOGO-FOR-WEB-200-PIXELS.png" alt="MyDevelopment Logo">
+            <div class="company-details">
+                <p>MyDevelopment, Real Estate Construction Company</p>
+                <hr>
+                <p>Aretis 94, Glifada</p>
+                <p>Athens - Greece</p>
+                <p>E-mail: info@mydevelopment.gr</p>
+                <p>Phone: +306948145786</p>
+            </div>
+            <div class="footer-nav">
+                <h4>QUICK LINKS</h4>
+                <ul>
+                    <a href="index.html">Home</a>
+                    <a href="projects.html">Projects</a>
+                    <a href="forsale.html">For Sale</a>
+                    <a href="contact.html">Contact</a>
+                </ul>
             </div>
         </div>
-    </section>
-
+        <div class="footer-copy">
+            <h6>Copyright © 2025 All rights reserved</h6>
+            <h6>Designed & Developed by <a href="http://www.site-mou.gr">www.site-mou.gr</a></h6>
+        </div>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
