--- a/project-glifada.html
+++ b/project-glifada.html
@@ -19,10 +19,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#skills">PROJECTS</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
                     <li>            <a href="../index.html" class="logo-link"><img class="logo" src="/images/LOGO-FOR-WEB-200-PIXELS.png" alt="mydevelopment Logo"></a>
                     </li>
-                    <li><a href="#projects">FOR&nbsp;SALE</a></li>
+                    <li><a href="forsale.html">FOR&nbsp;SALE</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
@@ -224,7 +224,9 @@
     <section class="our-work">
         <div class="title-container">
             <h2>More Projects</h2>
-            <h4>View All+</h4>
+            <a href="projects.html" style="text-decoration: none;">
+                <h4>View All+</h4>
+            </a>
         </div>
         <div class="projects">
             <div>
@@ -292,8 +294,8 @@
                 <h4>QUICK LINKS</h4>
                 <ul>
                     <a href="index.html">Home</a>
-                    <a href="services.html">Services</a>
                     <a href="projects.html">Projects</a>
+                    <a href="forsale.html">For Sale</a>
                     <a href="contact.html">Contact</a>
                 </ul>
             </div>
