--- a/project-glifada.html
+++ b/project-glifada.html
@@ -160,19 +160,19 @@
                     <div class="gallery-grid">
                         <div class="gallery-item">
                             <img src="images/A2glifada1.jpg" alt="Project Image 1">
-                            <p class="image-label">Living Room</p>
+                            <p class="image-label">Balcony View</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada2.jpg" alt="Project Image 2">
-                            <p class="image-label">Living Room</p>
+                            <p class="image-label">Balcony View</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada3.jpg" alt="Project Image 3">
-                            <p class="image-label">Living Room</p>
+                            <p class="image-label">Balcony View</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada4.jpg" alt="Project Image 4">
-                            <p class="image-label">Living Room</p>
+                            <p class="image-label">Balcony View at Night</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada5.jpg" alt="Project Image 4">
@@ -180,15 +180,15 @@
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada6.jpg" alt="Project Image 4">
-                            <p class="image-label">Kitchen</p>
+                            <p class="image-label">Balcony</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada7.jpg" alt="Project Image 4">
-                            <p class="image-label">Kitchen</p>
+                            <p class="image-label">Living Room</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada8.jpg" alt="Project Image 4">
-                            <p class="image-label">Kitchen</p>
+                            <p class="image-label">Balcony</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada9.jpg" alt="Project Image 4">
@@ -196,7 +196,7 @@
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada11.jpg" alt="Project Image 4">
-                            <p class="image-label">Balcony</p>
+                            <p class="image-label">Bathroom</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada12.jpg" alt="Project Image 4">
@@ -204,7 +204,7 @@
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada13.jpg" alt="Project Image 4">
-                            <p class="image-label">Bedroom</p>
+                            <p class="image-label">Balcony</p>
                         </div>
                         <div class="gallery-item">
                             <img src="images/A2glifada14.jpg" alt="Project Image 4">
