--- a/project-glifada.html
+++ b/project-glifada.html
@@ -230,38 +230,42 @@
         </div>
         <div class="projects">
             <div>
-                <div class="project">
-                    <img src="images/project1.png" alt="Modern Skyscraper">
-                    <div class="project-info">
-                        <div class="state">Sold</div>
-                        <h3>Modern Apartment Building</h3>
-                        <p>Glifada Attica</p>
+                <a href="project-glifada.html">
+                    <div class="project">
+                        <img src="images/project1.png" alt="Modern Skyscraper">
+                        <div class="project-info">
+                            <div class="state">Sold</div>
+                            <h3>Modern Apartment Building</h3>
+                            <p>Glifada Attica</p>
+                        </div>
                     </div>
-                </div>
-                <div class="project-details">
-                    <p><strong>Location:</strong> Glifada, Attica</p>
-                    <p><strong>Completion Year:</strong> 2024</p>
-                </div>
+                    <div class="project-details">
+                        <p><strong>Location:</strong> Glifada, Attica</p>
+                        <p><strong>Completion Year:</strong> 2024</p>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <a href="project-voula166.html">
+                    <div class="project">
+                        <img src="images/project2.png" alt="Luxury Villas">
+                        <div class="project-info">
+                            <div class="state sale">For Sale</div>
+                            <h3>1st floor
+                                Maisonette</h3>
+                            <p>Vasileiou Voulgaroktonou 3, Voula</p>
+                        </div>
+                    </div>
+                    <div class="project-details">
+                        <p><strong>Location:</strong> Voula, Attica</p>
+                        <p><strong>Completion Year:</strong> Under Construction</p>
+                        <h5>166 sm (1,787 ft²)</h5>
+                    </div>
+                </a>
             </div>
             <div>
                 <div class="project">
-                    <img src="images/project3.png" alt="Luxury Villas">
-                    <div class="project-info">
-                        <div class="state sale">For Sale</div>
-                        <h3>1st floor
-                            Maisonette</h3>
-                        <p>Vasileiou Voulgaroktonou 3, Voula</p>
-                    </div>
-                </div>
-                <div class="project-details">
-                    <p><strong>Location:</strong> Voula, Attica</p>
-                    <p><strong>Completion Year:</strong> Under Construction</p>
-                    <h5>115 sm (1,238 ft²)</h5>
-                </div>
-            </div>
-            <div>
-                <div class="project">
-                    <img src="images/project2.png" alt="Industrial Complex">
+                    <img src="images/project3.png" alt="Industrial Complex">
                     <div class="project-info">
                         <div class="state sale">For Sale</div>
                         <h3>Ground floor
@@ -272,7 +276,7 @@
                 <div class="project-details">
                     <p><strong>Location:</strong> Voula, Attica</p>
                     <p><strong>Completion Year:</strong> Under Construction</p>
-                    <h5>166 sm (1,787 ft²)</h5>
+                    <h5>115 sm (1,238 ft²)</h5>
                 </div>
             </div>
         </div>
