--- a/project-voula166.html
+++ b/project-voula166.html
@@ -59,9 +59,9 @@
     <section class="property-details">
         <img src="images/plan3.png" alt="MyDevelopment Building">
         <div class="container">
-            <h3>Property Features</h3>
+            <h3>Property Details</h3>
             <ul>
-                <li><strong>Size:</strong> 166 sq.m. (1,787 ft²)</li>
+                <li><strong>Square meters:</strong> 166 (1,787 ft²)</li>
                 <li><strong>Levels:</strong> 2</li>
                 <li><strong>Bedrooms:</strong> 3</li>
                 <li><strong>Bathrooms:</strong> 2 (one en-suite)</li>
@@ -109,15 +109,18 @@
     </section>
     <section class="amenities">
         <div class="container">
-            <h3>Luxury Features</h3>
+            <h3>Property Features</h3>
             <ul>
-                <li>Solar water heater</li>
-                <li>Underfloor heating with heat pump</li>
-                <li>Photovoltaic (solar) panels</li>
                 <li>Energy-efficient building A+</li>
+                <li>Photovoltaic (solar) panels</li>
+                <li>Underfloor heating with heat pump</li>
+
+                <li>Solar water heater</li>
                 <li>Thermal facade 12cm thick</li>
+                <li>Energy-efficient aluminum frames</li>
                 <li>Alarm system pre-installation</li>
                 <li>Smart home pre-installation</li>
+                <li>Storage</li>
                 <li>Parking with EV charging station</li>
                 <li>Private garden with private pool</li>
                 <li>Pre-installation of heated pool</li>
@@ -159,7 +162,7 @@
         <section class="location">
             <section class="photo-gallery photo-gallery1">
                 <div class="gallery-container">
-                    <h3>Plans Photo Gallery</h3>
+                    <h3>Floor Plan Gallery</h3>
                     <div class="gallery-grid">
                         <div class="gallery-item">
                             <img src="images/plan1.png" alt="Project Image 1">
