--- a/index.html
+++ b/index.html
@@ -85,20 +85,22 @@
                 </a>
             </div>
             <div>
-                <div class="project">
-                    <img src="images/project3.png" alt="Industrial Complex">
-                    <div class="project-info">
-                        <div class="state sale">For Sale</div>
-                        <h3>Ground floor
-                            Maisonette</h3>
-                        <p>Vasileiou Voulgaroktonou 3, Voula</p>
+                <a href="project-voula115.html">
+                    <div class="project">
+                        <img src="images/project3.png" alt="Industrial Complex">
+                        <div class="project-info">
+                            <div class="state sale">For Sale</div>
+                            <h3>Ground floor
+                                Maisonette</h3>
+                            <p>Vasileiou Voulgaroktonou 3, Voula</p>
+                        </div>
                     </div>
-                </div>
-                <div class="project-details">
-                    <p><strong>Location:</strong> Voula, Attica</p>
-                    <p><strong>Completion Year:</strong> Under Construction</p>
-                    <h5>115 sm (1,238 ft²)</h5>
-                </div>
+                    <div class="project-details">
+                        <p><strong>Location:</strong> Voula, Attica</p>
+                        <p><strong>Completion Year:</strong> Under Construction</p>
+                        <h5>115 sm (1,238 ft²)</h5>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
